# rust-play

./: .envrc.example  README.md
api-rust/: .env.example  Cargo.toml
api-rust/src/: main.rs  models.rs  schema.rs
docker/: .gitignore
docker/dev/: db.dockerfile  docker-compose.yml.example  rust.dockerfile
docker/dev/csv/: pcr_count.csv
docker/dev/scripts/: create_tables.sh  init_db.sh  setup.sh
