[package]
name = "api_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "1.4.4", features = ["postgres", "chrono"], default-features = false }
dotenv = "0.15.0"
chrono = "0.4"
serde = "1"
